--- a/results/01_load.html
+++ b/results/01_load.html
@@ -353,47 +353,52 @@ display: none;
 </div>
 
 
+<div id="load" class="section level1">
+<h1>01_Load</h1>
+<div id="libraries" class="section level2">
+<h2>Libraries</h2>
 <pre class="r"><code>library(tidyverse)
 library(here)</code></pre>
+</div>
+</div>
 <div id="loading-data" class="section level1">
 <h1>Loading Data</h1>
-<pre class="r"><code>raw_dir &lt;- here(&quot;data/data_raw&quot;)
+<p>Downloading data from dropbox containing the proteomics dataset.</p>
+<pre class="r"><code>#defining path to store data in the folder data_raw
+raw_dir &lt;- here(&quot;data/_raw&quot;)
 data_file &lt;- &quot;mouse_cell_stages.zip&quot;
-data_loc &lt;- &quot;https://www.dropbox.com/scl/fi/d63o8sgp03fyu2s6tsqau/group_6_data.zip?rlkey=50z2rrfaowoizqivttdmyym2i&amp;st=kngr6y9j&amp;dl=1&quot;
+data_location &lt;- &quot;https://www.dropbox.com/scl/fi/d63o8sgp03fyu2s6tsqau/group_6_data.zip?rlkey=50z2rrfaowoizqivttdmyym2i&amp;st=kngr6y9j&amp;dl=1&quot;
 
 
-if( !dir.exists(raw_dir) ){
+if( !dir.exists(raw_dir) ){ # Check if the path already exists and creates it if it doesn&#39;t  exist
   dir.create(path = raw_dir)
-}
-if( !file.exists(str_c(raw_dir, data_file, sep = &quot;/&quot;)) ){
+} 
+if( !file.exists(str_c(raw_dir, data_file, sep = &quot;/&quot;)) ){ # Downloads the data unless it is not already downloaded
   download.file(
-    url = data_loc,
+    url = data_location,
     destfile = str_c(raw_dir, data_file, sep = &quot;/&quot;))
 }
-# Unzip the proteomics data
 
+# Unzip the proteomics data
 unzip(str_c(raw_dir, data_file, sep = &quot;/&quot;), exdir = raw_dir)</code></pre>
 <pre class="r"><code># read in csv files for all cell populations
 
-df_hsc &lt;- read_csv2(file = here(&quot;data/raw_data/group6_data_HSC_Report.csv&quot;), na=&quot;NaN&quot;)
-df_mep &lt;- read_csv2(file = here(&quot;data/raw_data/group6_data_MEP_Report.csv&quot;), na=&quot;NaN&quot;)
-df_gmp &lt;- read_csv2(file = here(&quot;data/raw_data/group6_data_GMP_Report.csv&quot;), na=&quot;NaN&quot;)
-df_clp &lt;- read_csv2(file = here(&quot;data/raw_data/group6_data_CLP_Report.csv&quot;), na=&quot;NaN&quot;)
-df_cmp &lt;- read_csv2(file = here(&quot;data/raw_data/group6_data_CMP_Report.csv&quot;), na=&quot;NaN&quot;)
+df_hsc &lt;- read_csv2(file = here(&quot;data/_raw/group6_data_HSC_Report.csv&quot;), na=&quot;NaN&quot;)
+df_mep &lt;- read_csv2(file = here(&quot;data/_raw/group6_data_MEP_Report.csv&quot;), na=&quot;NaN&quot;)
+df_gmp &lt;- read_csv2(file = here(&quot;data/_raw/group6_data_GMP_Report.csv&quot;), na=&quot;NaN&quot;)
+df_clp &lt;- read_csv2(file = here(&quot;data/_raw/group6_data_CLP_Report.csv&quot;), na=&quot;NaN&quot;)
+df_cmp &lt;- read_csv2(file = here(&quot;data/_raw/group6_data_CMP_Report.csv&quot;), na=&quot;NaN&quot;)
 
 
 #| echo: false
 #| eval: false</code></pre>
 <div id="save-the-data-file-for-02_clean.qmd" class="section level3">
 <h3>Save the data-file for 02_clean.qmd</h3>
-<pre class="r"><code>data_path &lt;- here(&quot;data&quot;)
-file_name &lt;- &quot;01_df_intensities.tsv.gz&quot;
-
-write_tsv(df_hsc, file = here(&quot;data/01_hsc.tsv&quot;))
-write_tsv(df_mep, file = here(&quot;data/01_mep.tsv&quot;))
-write_tsv(df_gmp, file = here(&quot;data/01_gmp.tsv&quot;))
-write_tsv(df_clp, file = here(&quot;data/01_clp.tsv&quot;))
-write_tsv(df_cmp, file = here(&quot;data/01_cmp.tsv&quot;))</code></pre>
+<pre class="r"><code>write_tsv(df_hsc, file = here(&quot;data/01_hsc.tsv.gz&quot;))
+write_tsv(df_mep, file = here(&quot;data/01_mep.tsv.gz&quot;))
+write_tsv(df_gmp, file = here(&quot;data/01_gmp.tsv.gz&quot;))
+write_tsv(df_clp, file = here(&quot;data/01_clp.tsv.gz&quot;))
+write_tsv(df_cmp, file = here(&quot;data/01_cmp.tsv.gz&quot;))</code></pre>
 </div>
 </div>
 
